--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "apollo-server": "^2.7.0",
     "apollo-server-express": "^2.4.8",
+    "axios": "^0.19.0",
     "esm": "^3.2.25",
     "express": "^4.16.4",
     "graphql": "^14.2.1",
